--- a/lab01/CMakeLists.txt
+++ b/lab01/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(cle-ws
     # Add your files here if needed.
 )
 target_compile_features(cle-ws PRIVATE cxx_std_20)
-target_compile_options(cle-ws PRIVATE -Wall -Wextra)
+target_compile_options(cle-ws PRIVATE -Wall -Wextra) # To see -O3 -march=native
 
 add_executable(cle-samples src/lz4.c src/create-samples.cpp)
 target_compile_features(cle-samples PRIVATE cxx_std_20)
